# cpp-rich

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  make_single_header.py  rich.hpp
.github/: release.yml
.github/workflows/: gen-docs.yml  linux-build.yml  macos-build.yml  single-header.yml
examples/: example.cpp  quick_example.cpp
include/: CMakeLists.txt
include/iris/: iris.hpp
include/rich/: exception.hpp  file.hpp  format.hpp  fundamental.hpp  iterator.hpp  math.hpp  ranges.hpp  regex.hpp  rich.hpp  saturation.hpp  style.hpp
include/rich/style/: box.hpp  cell.hpp  enumerate.hpp  format_spec.hpp  line_formatter.hpp  lines.hpp  panel.hpp  segment.hpp  segments.hpp  span.hpp  syntax_highlight.hpp  table.hpp
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  main.cpp
tests/style/: CMakeLists.txt  style.cpp
